<resources>
    <string name="app_name">First Choice</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="permissions_disabled">Permissions Disabled</string>
    <string name="mobile_allowance_warning">This download is %1$s and you are on a mobile only connection, this will use your allowance.  Proceed?</string>
    <string name="message_no_permissions">Please enable the correct \'storage\' permissions for this application under the device\'s settings</string>
    <string name="search_tip">Search by Keyword, Part #</string>
    <string name="unable_to_retrieve_data">Unable to retrieve data. Please try again later.</string>
    <string name="action_search">search</string>
    <string name="more_help_section"><![CDATA[Help & Support]]></string>
    <string name="more_contact_us_section">Contact us</string>
    <string name="more_about">About</string>
    <string name="place_barcode">Place barcode / QR code in the area above</string>
    <string name="allow_camera">Allow camera access to continue</string>
    <string name="prev_scans">Previous Scans</string>
    <string name="current_scans">Current Scans</string>
    <string name="enter_your_barcode_number_here">Enter your barcode number here</string>
    <string name="manually_enter_a_barcode">Manually enter a barcode</string>
    <string name="enter_manual_barcode">Enter manual barcode</string>
    <string name="flashlight">Flashlight</string>
    <string name="scan_barcode">Scan a barcode or a QR code to save the item here</string>
    <string name="you_have_no_scanned_codes">You have no scanned codes</string>
    <string name="enable_camera_access">Tap to enable camera access</string>
    <string name="camera_access_is_required">Camera Access is Required</string>
    <string name="image">image</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="email_address_required">Email Address (Required)</string>
    <string name="company_required">Company (Required)</string>
    <string name="full_name_required">Full name (required)</string>
    <string name="default_notification_channel_id">fc_channel</string>
    <string name="Manuals">Manuals</string>
    <string name="hc_waiting_message">Searching for a free agent. Please hold on.</string>
    <string name="hc_message_hint">Type message</string>
    <string name="hc_copied">Copied</string>
    <string name="hc_menu_copy">Copy</string>
    <string name="hc_menu_open">Open</string>
    <string name="hc_sent_at">at</string>
    <string name="hc_permissions_ok">OK</string>
    <string name="hc_permissions_cancel">Cancel</string>
    <string name="hc_permissions_content">Allow file system and camera access to improve file sharing</string>
    <string name="hc_messages_updating">Updating…</string>
    <string name="hc_button_send">Send</string>
    <string name="hc_more_agents">and %1$d more</string>
    <string name="hc_menu_view_image">View image</string>
    <string name="hc_notification_channel_text">Allow messages notifications</string>
    <string name="show_password">Show Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="action_filter">filter</string>
    <string name="signed_in">Signed In</string>
    <string name="show_passowrd">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="valid_email">You need to enter a valid email address</string>
    <string name="valid_password">You need to enter a password</string>
    <string name="postcode_required">Postcode (Required)</string>
    <string name="postcode_reason">The postcode helps us correctly match with your account.  Ensuring we can quote you an accurate price as quickly as possible</string>
    <string name="contact_phone">Contact phone number</string>
    <string name="clear_downloads">Clear Downloads</string>
    <string name="clear_downloads_warning">This will delete all of your downloaded showManuals and catalogues.  Proceed?</string>
    <string name="offlinemsg">Your internet connection appears to be offline</string>
    <string name="equipment_manufacturer_required">Equipment Manufacturer (Required)</string>
    <string name="enter_equipment_model_number">Enter equipment model number</string>
    <string name="add_additional_information">Add additional information.</string>
    <string name="comments">Comments</string>
    <string name="parts_message_4">4. Add any other additional information that may help us identify your part below.</string>
    <string name="parts_message_3">3. Include a photo of any product labels showing potentially serial, model or identification numbers.</string>
    <string name="parts_message_2">2. Take up to three photos from different angles.</string>
    <string name="parts_message_1">1. Place your part on a light background without other objects in-shot</string>
    <string name="submit_your_request">SUBMIT YOUR REQUEST</string>
    <string name="enter_equipment_serial_number">Enter equipment serial number</string>
    <string name="modelstr">Model</string>
    <string name="sat_08_30_12_30">Sat: Closed</string>
    <string name="mon_fri_08_30_17_30">Mon–Fri: 08:30 – 17:30</string>
    <string name="day_opening_times">Opening Times (GMT)</string>
    <string name="directions">DIRECTIONS</string>
    <string name="canes_cannock_ws11_8ld">Canes, Cannock WS11 8LD</string>
    <string name="lakeside_cannock_norton">Lakeside, Cannock, Norton</string>
    <string name="fc_address">Blakeney Way, Kingswood</string>
    <string name="address">Address</string>
    <string name="enter_a_name_for_your_collection">Enter a name for your collection</string>
    <string name="collection_name">Collection Name</string>
    <string name="get_the_most_out_of_our_store">Get the most out of our Store!</string>
    <string name="sign_in_to_view_your_orders"><![CDATA[Sign in to view your orders, check out faster & save items to your Wishlists]]></string>
    <string name="login">LOGIN</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="take_up_to_three_pictures_of_your_part_and_we_will_try_and_identify_it_for_you">Check for labels, engravings and identifiers on the equipment.</string>
    <string name="photo_selection">Photo Selection</string>
    <string name="take_up_to_three_pictures_of_the_part_to_help_us_identify_it_for_you">Take up to three pictures of the part to help us identify it for you.</string>
    <string name="identification_information">Identification Information</string>
    <string name="create_new_collection">CREATE NEW COLLECTION</string>
    <string name="clearWebCache">Clear</string>
    <string name="all">All</string>
    <string name="favourites">Favourites</string>
    <string name="collections">Collections</string>
    <string name="more_info">We need more information</string>
    <string name="apply_filters">Please apply filters to your search</string>
    <string name="manuals_amp_catalogues"><![CDATA[MANUALS & CATALOGUES]]></string>
    <string name="search_now">SEARCH NOW</string>
    <string name="clearDownloads">Delete</string>
    <string name="sync">sync</string>
    <string name="parts_diagram">Parts Diagram</string>
    <string name="view_catalogues">View Catalogues</string>
    <string name="or">or</string>
    <string name="select_a_manufacturer">Select a manufacturer</string>
    <string name="select_an_equipment_type">Select an equipment type</string>
    <string name="select_a_model">Select a model</string>
    <string name="show_results">Show Results</string>
    <string name="why_are_we_asking_for_this">Why are we asking for this</string>
    <string name="submit">SUBMIT</string>
    <string name="magnifying_glass">Magnifying glass</string>
    <string name="next">next</string>
    <string name="first_choice_consu">First Choice Consumables</string>
    <string name="master_distributor">MASTER DISTRIBUTOR</string>
    <string name="exclusive_partner">EXCLUSIVE PARTNER</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="recent_search_str">RECENT_SEARCHES_STRING</string>
    <string name="document_image">document image</string>
    <string name="document_icon">document icon</string>
    <string name="next_arrow">next arrow</string>
    <string name="model_image">model image</string>
    <string name="part_image">part_image</string>
    <string name="ex_vat">exVAT</string>
    <string name="inc_vat">incVAT</string>
    <string name="next_day_delivery">Next Day Delivery</string>
    <string name="clock">clock</string>
    <string name="search_for_a_part">Search for a part</string>
    <string name="you_recently_viewed">Your Recently Viewed</string>
    <string name="category">CATEGORY</string>
    <string name="description">DESCRIPTION</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="tick_image">Tick Image</string>
    <string name="zero">0</string>
    <string name="need_your_part_quickly">Need your part quickly? Choose a Next Day Delivery option at Checkout</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="first_choice_logo">First Choice Logo</string>
    <string name="clear">CLEAR</string>
    <string name="downloaded_to_manuals">Downloaded to \'Manuals\'</string>
    <string name="view_all">VIEW ALL</string>
    <string name="downloading">Downloading....</string>
    <string name="WhatsNew">What\'s New</string>
    <string name="Rate">Rate us on Google Play</string>
    <string name="Terms"><![CDATA[Terms & Conditions]]></string>
    <string name="Privacy">Privacy Policy</string>
    <string name="more_policies">POLICIES</string>
    <string name="more_version">VERSION</string>
    <string name="sign_in_to_manage_your_addresses"><![CDATA[Sign in to view your orders, check out faster & manage your account\'s address book]]></string>
    <string name="default_address">Default Address</string>
    <string name="addresses">Addresses</string>
    <string name="set_address">Set Address</string>
    <string name="chat_with_an_expert">CHAT WITH AN EXPERT</string>
    <string name="delivery_methods">Delivery Methods</string>
    <string name="payment_method">Payment Method</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="zero_pounds">£0.00</string>
    <string name="error_loading_product">Error loading product</string>
    <string name="superseded_by">SUPERSEDED BY  %1$s</string>
    <string name="just_now_text">Just now</string>
    <string name="obsolete">OBSOLETE</string>
    <string name="on_application">PRICE ON APPLICATION</string>
    <string name="available_on_order">AVAILABLE ON ORDER</string>
    <string name="delivery_estimate">DELIVERY AVAILABLE IN %1$d DAY%2$s</string>
    <string name="qty">Qty : %1$d </string>
    <string name="discount">%1$d %%</string>
    <string name="full_name">%1$s %2$s </string>
    <string name="account_sign_in">ACCOUNT SIGN IN</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="total">Total</string>
    <string name="shipping">Shipping</string>
    <string name="subtotal">Subtotal</string>
    <string name="by_placing_your_order_you_agree_to_our_privacy_policy_and_terms_of_use">By placing your order, you agree to our Privacy Policy and Terms of Use</string>
    <string name="customer">Customer</string>
    <string name="account_type">Account Type</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="account_details_can_be_edited_through_our_website">Account details can be edited through our website</string>
    <string name="edit_details">Edit Details</string>
</resources>