<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:background="@color/light_background"
    android:animateLayoutChanges="true"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/FCToolBar"
            app:menu="@menu/action_menu_fragment_sign_in"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:subtitle="Account Sign In"
            app:title="Sign In" />
    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/signInImage"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:src="@drawable/account_icon"
        app:tint="@color/fcBlue"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunitosans_bold"
        android:text="@string/account_sign_in"
        android:textColor="@color/fcBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/signInImage"
        app:layout_constraintStart_toEndOf="@+id/signInImage"
        app:layout_constraintTop_toTopOf="@id/signInImage" />


    <TextView
        android:id="@+id/textInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitosans_semibold"
        android:layout_margin="16dp"
        android:text="@string/sign_in_to_manage_your_addresses"
        android:textColor="@color/text_colour_1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@id/signInImage" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunitosans_semibold"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/email_address"
        android:textColor="@color/text_colour_1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInfo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_address"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <uk.co.firstchoice_cs.core.widgets.ClearFocusAutoCompleteTextView
            android:id="@+id/emailEdit"
            style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nunitosans_semibold"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout"
            android:textColor="@color/text_colour_1"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordText"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <uk.co.firstchoice_cs.core.widgets.ClearFocusAutoCompleteTextView
                android:id="@+id/passwordEdit"
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/enter_your_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showPasswordMButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/show_password"
            android:textAllCaps="false"
            android:textColor="@color/text_colour_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            android:textSize="12sp" />

        <!-- Button Section !-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            style="@style/LargeRedButton"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/showPasswordMButton"
            android:text="@string/sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>