<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:background="@android:color/white">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:singleLine="true"
            android:text="@string/subtotal"
            android:textColor="@color/blue_header_line"
            android:textSize="15sp" />

    <uk.co.firstchoice_cs.core.widgets.PriceWidget
        android:id="@+id/subtotalValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/subtotalText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shippingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunitosans_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtotalValueText"
        android:singleLine="true"
        android:text="@string/shipping"
        android:textColor="@color/blue_header_line"
        android:textSize="15sp" />

    <uk.co.firstchoice_cs.core.widgets.PriceWidget
        android:id="@+id/shippingValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/shippingText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunitosans_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shippingValueText"
        android:singleLine="true"
        android:text="@string/total"
        android:textColor="@color/blue_header_line"
        android:textSize="15sp" />

    <uk.co.firstchoice_cs.core.widgets.PriceWidget
        android:id="@+id/totalValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/totalText" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitosans_regular"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/totalValueText"
        android:lines="2"
        android:textSize="12sp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/by_placing_your_order_you_agree_to_our_privacy_policy_and_terms_of_use"/>
</androidx.constraintlayout.widget.ConstraintLayout>